<resources>
    <string name="app_name">A2_sohyeon_kim</string>
    <string name="home">Home</string>
    <string name="recipes">Recipes</string>
    <string name="timer">Timer</string>
    <string name="feedback">Feedback</string>
    <string name="welcome_message">We can cook delicious Korean food "\ud83c\udf72" "\ud83c\udf72" "\ud83c\udf72"</string>
    <string name="welcome_message2">Check out the various recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank dffffffffffffffffffffffffffragment</string>
    <string name="button_go">GO!</string>
    <string name="tteokbokki">TTEOKBOKKI</string>
    <string name="galbi">GALBI</string>
    <string name="hotteok">HOTTEOK</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="zero">00:00</string>
    <string name="enter_name">Enter your name here</string>
    <string name="enter_feedback">Enter your feedback here</string>


</resources>