<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/home"
        android:textAlignment="center"
        android:textSize="45sp" />

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="446dp"
            app:srcCompat="@drawable/img_koreafood" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message2"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_go"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_dark_background"
                android:padding="10dp"
                android:onClick="launchRecipesActivity"
                android:text="@string/button_go" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        android:id="@+id/bottom_nav"
        android:background="@drawable/squared_nav"
        app:itemTextColor="@drawable/nav_selector"
        app:itemIconTint="@drawable/nav_selector"
        app:itemActiveIndicatorStyle="@color/white"/>
</LinearLayout>