<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textSize="45sp" />


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipeInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/timerSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/zero"
            android:textSize="24sp"
            android:textAlignment="center" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:progress="100"
            android:max="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:backgroundTint="#AF070F"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause"
                android:backgroundTint="@color/cardview_dark_background"
                android:layout_marginStart="16dp"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:backgroundTint="@color/cardview_dark_background"
                android:layout_marginStart="16dp"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        android:id="@+id/bottom_nav"
        android:background="@drawable/squared_nav"
        app:itemTextColor="@drawable/nav_selector"
        app:itemIconTint="@drawable/nav_selector"
        app:itemActiveIndicatorStyle="@color/white"/>
</LinearLayout>