<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/feedback"
        android:textAlignment="center"
        android:textSize="45sp" />


    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />

        <EditText
            android:id="@+id/feedbackNameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="center"
            android:hint="@string/enter_name" />

        <EditText
            android:id="@+id/feedbackContentEditText"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_feedback" />

        <Switch
            android:id="@+id/shareSwitch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:text="Share feedback with community" />

        <Button
            android:id="@+id/submitFeedbackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#AF070F"
            android:text="@string/submit" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        android:id="@+id/bottom_nav"
        android:background="@drawable/squared_nav"
        app:itemTextColor="@drawable/nav_selector"
        app:itemIconTint="@drawable/nav_selector"
        app:itemActiveIndicatorStyle="@color/white"/>
</LinearLayout>