<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/recipes"
        android:textAlignment="center"
        android:textSize="45sp" />

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/recipes_tteokbokki"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tteokbokki" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tteokbokki"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/recipes_galbi"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/galbi" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/galbi"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/recipes_hotteok"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hotteok" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/hotteok"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        android:id="@+id/bottom_nav"
        android:background="@drawable/squared_nav"
        app:itemTextColor="@drawable/nav_selector"
        app:itemIconTint="@drawable/nav_selector"
        app:itemActiveIndicatorStyle="@color/white"/>
</LinearLayout>