<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/recipes"
        android:textAlignment="center"
        android:textSize="45sp" />

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="610dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detailImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tteokbokki" />

        <TextView
            android:id="@+id/foodName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/tteokbokki"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instructionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="120dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cookingTimer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timer"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/submitFeedbackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#AF070F"
                android:padding="10dp"
                android:onClick="launchTimerActivity"
                android:text="@string/timer" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        android:id="@+id/bottom_nav"
        android:background="@drawable/squared_nav"
        app:itemTextColor="@drawable/nav_selector"
        app:itemIconTint="@drawable/nav_selector"
        app:itemActiveIndicatorStyle="@color/white"/>
</LinearLayout>